# alfabank-limits

./: .gitignore  README.md  holders_config.example.json  main.py  pyproject.toml  test_setup.py
.claude/skills/svod-svodov/: SKILL.md
.claude/skills/svod-svodov/examples/golden/: 2026-05-svod.md
.claude/skills/svod-svodov/examples/output/: Свод Сводов за Май 2026.docx
.claude/skills/svod-svodov/tools/: build_report.py  export_sks_tabs.gs  make_sample_xlsx.py  md_to_docx.py  parse_svod.py  read_svod_xlsx.py  verify_may.py
.github/workflows/: ci.yml
tests/: test_card_id.py  test_config.py  test_sms.py
