[project]
name = "alfabank-limits"
version = "0.1.0"
description = "Автоматическая установка лимитов на корпоративные карты Альфа-Бизнес"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# Длинные строки встречаются в выровненных табличных блоках и ASCII-боксе —
# выравнивание читается лучше, чем перенос.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
